// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convoKey is truthy 1`] = `
<div
  className="flex-100 layout-row layout-align-start-start  convo_tile_wrapper"
  onClick={[Function]}
>
  <styled.div
    className="flex layout-row layout-align-center-start-space-between pointy layout-wrap convo_tile "
  >
    <div
      className="flex-95 layout-row layout-align-start-center"
    >
      <div
        className="flex-15-layout-row-layout-align-start-center"
      >
        <i
          className="flex-none clip fa fa-truck"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333,#fafafa)",
            }
          }
        />
      </div>
      <div
        className="flex-5"
      />
      <p
        className="flex-none"
      >
        Shipment Reference
        :
      </p>
      <div
        className="flex-5"
      />
      <b>
        FOO_CONVO_KEY
      </b>
    </div>
    <div
      className="flex-95 layout-row layout-align-start-center"
    >
      Rejected by Admin
    </div>
    <div
      className="flex-95 layout-row layout-align-start-center"
    >
      STATUS
      :
      <div
        className="flex-5"
      />
      <i>
        <b>
          REJECTED
        </b>
      </i>
      <div
        className="flex-5"
      />
      <i
        className="fa fa-question"
        style={
          Object {
            "color": "#A19F9F",
          }
        }
      />
    </div>
    <p
      className="flex-none"
    />
  </styled.div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-align-start-start  convo_tile_wrapper"
  onClick={[Function]}
>
  <styled.div
    className="flex layout-row layout-align-center-start-space-between pointy layout-wrap convo_tile "
  >
    <div
      className="flex-95 layout-row layout-align-start-center"
    >
      <div
        className="flex-15-layout-row-layout-align-start-center"
      >
        <i
          className="flex-none clip fa fa-truck"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333,#fafafa)",
            }
          }
        />
      </div>
      <div
        className="flex-5"
      />
      <p
        className="flex-none"
      >
        Shipment Reference
        :
      </p>
      <div
        className="flex-5"
      />
      <b>
        CONVO_KEY
      </b>
    </div>
    <div
      className="flex-95 layout-row layout-align-start-center"
    >
      Rejected by Admin
    </div>
    <div
      className="flex-95 layout-row layout-align-start-center"
    >
      STATUS
      :
      <div
        className="flex-5"
      />
      <i>
        <b>
          REJECTED
        </b>
      </i>
      <div
        className="flex-5"
      />
      <i
        className="fa fa-question"
        style={
          Object {
            "color": "#A19F9F",
          }
        }
      />
    </div>
    <p
      className="flex-none"
    />
  </styled.div>
</div>
`;

exports[`shipment.status === confirmed 1`] = `
<div
  className="flex-100 layout-row layout-align-start-start  convo_tile_wrapper"
  onClick={[Function]}
>
  <styled.div
    className="flex layout-row layout-align-center-start-space-between pointy layout-wrap convo_tile "
  >
    <div
      className="flex-95 layout-row layout-align-start-center"
    >
      <div
        className="flex-15-layout-row-layout-align-start-center"
      >
        <i
          className="flex-none clip fa fa-truck"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333,#fafafa)",
            }
          }
        />
      </div>
      <div
        className="flex-5"
      />
      <p
        className="flex-none"
      >
        Shipment Reference
        :
      </p>
      <div
        className="flex-5"
      />
      <b>
        CONVO_KEY
      </b>
    </div>
    <div
      className="flex-95 layout-row layout-align-start-center"
    >
      Rejected by Admin
    </div>
    <div
      className="flex-95 layout-row layout-align-start-center"
    >
      STATUS
      :
      <div
        className="flex-5"
      />
      <i>
        <b>
          REJECTED
        </b>
      </i>
      <div
        className="flex-5"
      />
      <i
        className="fa fa-check"
        style={
          Object {
            "color": "#3ACE62",
          }
        }
      />
    </div>
    <p
      className="flex-none"
    />
  </styled.div>
</div>
`;

exports[`shipment.status === requested 1`] = `
<div
  className="flex-100 layout-row layout-align-start-start  convo_tile_wrapper"
  onClick={[Function]}
>
  <styled.div
    className="flex layout-row layout-align-center-start-space-between pointy layout-wrap convo_tile "
  >
    <div
      className="flex-95 layout-row layout-align-start-center"
    >
      <div
        className="flex-15-layout-row-layout-align-start-center"
      >
        <i
          className="flex-none clip fa fa-truck"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333,#fafafa)",
            }
          }
        />
      </div>
      <div
        className="flex-5"
      />
      <p
        className="flex-none"
      >
        Shipment Reference
        :
      </p>
      <div
        className="flex-5"
      />
      <b>
        CONVO_KEY
      </b>
    </div>
    <div
      className="flex-95 layout-row layout-align-start-center"
    >
      Rejected by Admin
    </div>
    <div
      className="flex-95 layout-row layout-align-start-center"
    >
      STATUS
      :
      <div
        className="flex-5"
      />
      <i>
        <b>
          REJECTED
        </b>
      </i>
      <div
        className="flex-5"
      />
      <i
        className="fa fa-hourglass-half"
        style={
          Object {
            "color": "#DEBC4C",
          }
        }
      />
    </div>
    <p
      className="flex-none"
    />
  </styled.div>
</div>
`;
